[metadata]
name = gpmf
version = 0.2.0
description = A module to read GPMF data embedded in GoPro video files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexis-mignon/pygpmf
keywords = cli command line interface
license = MIT
author = alexis.mignon@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
packages = find:
include_package_data = True
install_requires =
    numpy
    matplotlib
    gpxpy
    ffmpeg-python
    geopandas
    descartes
    contextily
    pandas

[options.extras_require]
test =
    pytest==6.0.1
doc =
    mkdocs==1.1.2
